# countrynames

./: .bumpversion.cfg  pyproject.toml
.github/workflows/: build.yml
countrynames/: __init__.py  compile.py  data.py  data.yaml  mappings.py  util.py
